@@ -1,8 +1,10 @@
-package com.vibecoding.demo.domain.board.controller;
+package com.vibecoding.demo.domain.comment.controller;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.vibecoding.demo.domain.board.dto.*;
-import com.vibecoding.demo.domain.board.service.PostService;
+import com.vibecoding.demo.domain.comment.dto.CommentCreateRequest;
+import com.vibecoding.demo.domain.comment.dto.CommentResponse;
+import com.vibecoding.demo.domain.comment.dto.CommentUpdateRequest;
+import com.vibecoding.demo.domain.comment.service.CommentService;
 import com.vibecoding.demo.domain.member.entity.Member;
 import com.vibecoding.demo.domain.member.entity.Role;
 import com.vibecoding.demo.global.security.CustomUserDetails;
@@ -18,7 +20,7 @@ import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
+import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
@@ -27,20 +29,20 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@WebMvcTest(PostApiController.class)
+@WebMvcTest(CommentApiController.class)
 @AutoConfigureMockMvc(addFilters = false)
-class PostApiControllerTest {
+class CommentApiControllerTest {
 
     private MockMvc mockMvc;
 
     @Autowired
-    private PostApiController postApiController;
+    private CommentApiController commentApiController;
 
     @Autowired
     private ObjectMapper objectMapper;
 
     @MockBean
-    private PostService postService;
+    private CommentService commentService;
 
     @MockBean
     private com.vibecoding.demo.global.security.JwtAuthenticationFilter jwtAuthenticationFilter;
@@ -56,7 +58,7 @@ class PostApiControllerTest {
 
     @BeforeEach
     void setup() {
-        mockMvc = MockMvcBuilders.standaloneSetup(postApiController)
+        mockMvc = MockMvcBuilders.standaloneSetup(commentApiController)
                 .setCustomArgumentResolvers(new org.springframework.security.web.method.annotation.AuthenticationPrincipalArgumentResolver())
                 .setControllerAdvice(new com.vibecoding.demo.global.exception.GlobalExceptionHandler())
                 .build();
@@ -74,17 +76,15 @@ class PostApiControllerTest {
         return new CustomUserDetails(member);
     }
 
-    // --- 게시글 테스트 ---
-
     @Test
-    @DisplayName("로그인한 사용자는 게시글을 등록할 수 있다")
-    void createPost() throws Exception {
-        PostCreateRequest request = new PostCreateRequest("title", "content");
+    @DisplayName("댓글을 등록한다")
+    void createComment() throws Exception {
+        CommentCreateRequest request = new CommentCreateRequest("comment content");
         CustomUserDetails userDetails = createUserDetails(1L, Role.USER);
         setAuthentication(userDetails);
-        given(postService.createPost(any(PostCreateRequest.class), eq(1L))).willReturn(1L);
+        given(commentService.createComment(eq(1L), eq(1L), any(CommentCreateRequest.class))).willReturn(1L);
 
-        mockMvc.perform(post("/api/posts")
+        mockMvc.perform(post("/api/posts/1/comments")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(request)))
                 .andExpect(status().isOk())
@@ -93,40 +93,15 @@ class PostApiControllerTest {
     }
 
     @Test
-    @DisplayName("게시글 목록을 조회한다")
-    void getPosts() throws Exception {
-        PostListResponse post1 = new PostListResponse(1L, "T1", "tester", 0, LocalDateTime.now());
-        given(postService.getPostsByOffsetAndLimit(0, 10)).willReturn(Arrays.asList(post1));
+    @DisplayName("댓글 목록을 조회한다")
+    void getComments() throws Exception {
+        CommentResponse comment = new CommentResponse(1L, "content", "tester", 1L, false, LocalDateTime.now());
+        given(commentService.getComments(1L)).willReturn(List.of(comment));
 
-        mockMvc.perform(get("/api/posts"))
+        mockMvc.perform(get("/api/posts/1/comments"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.success").value(true))
-                .andExpect(jsonPath("$.data[0].title").value("T1"));
-    }
-
-    @Test
-    @DisplayName("게시글을 수정한다")
-    void updatePost() throws Exception {
-        PostUpdateRequest request = new PostUpdateRequest("new title", "new content");
-        CustomUserDetails userDetails = createUserDetails(1L, Role.USER);
-        setAuthentication(userDetails);
-
-        mockMvc.perform(patch("/api/posts/1")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(request)))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.success").value(true));
-    }
-
-    @Test
-    @DisplayName("GET /api/posts/count 에 전체 게시글 개수가 정상 반환된다")
-    void getPostCount() throws Exception {
-        given(postService.getTotalPostCount()).willReturn(15L);
-
-        mockMvc.perform(get("/api/posts/count"))
-                .andExpect(status().isOk())
-                .andExpect(jsonPath("$.success").value(true))
-                .andExpect(jsonPath("$.data").value(15));
+                .andExpect(jsonPath("$.data[0].content").value("content"));
     }
 
     private void setAuthentication(CustomUserDetails userDetails) {
